Add the Shiv and Normalize libraries as submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "lib/box-sizing"]
 	path = lib/box-sizing
 	url = https://github.com/adamnbowen/box-sizing-polyfill.git
+[submodule "lib/html5shiv"]
+	path = lib/html5shiv
+	url = https://github.com/aFarkas/html5shiv
+[submodule "lib/normalize"]
+	path = lib/normalize
+	url = https://github.com/necolas/normalize.css.git
