Add my fork of Normalize

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/html5shiv"]
 	path = lib/html5shiv
 	url = https://github.com/aFarkas/html5shiv
+[submodule "lib/normalize"]
+	path = lib/normalize
+	url = https://github.com/jacine/normalize.css.git
